--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
                     <span>Retirar</span></a>
             </li>
 			
+			 </li>
+			
+			<li class="nav-item active">
+                <a class="nav-link" href="receber.html">
+                    <i class="fab fa-affiliatetheme"></i>
+                    <span>Afiliados</span></a>
+            </li>
+			
+			
 			<li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
                     aria-expanded="true" aria-controls="collapseTwo">
@@ -724,7 +733,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; Your Website 2021</span>
+                        <span>Copyright &copy; Domingos Filho Dev 2021</span>
                     </div>
                 </div>
             </footer>
