--- a/faq.html
+++ b/faq.html
@@ -205,7 +205,7 @@
                                 <!-- Counter - Alerts -->
                                 <span class="badge badge-danger badge-counter">3+</span>
                             </a>
-                            <!-- Dropdown - Alerts -->
+                            <!-- Dropdown - Centro de Alerts -->
                             <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                 aria-labelledby="alertsDropdown">
                                 <h6 class="dropdown-header">
@@ -229,8 +229,8 @@
                                         </div>
                                     </div>
                                     <div>
-                                        <div class="small text-gray-500">7, Dezembro 2021</div>
-                                        50 Doges, Apenas!
+                                        <div class="small text-gray-500">Doações em Dogecoin</div>
+                                        Envie no Endereço = DEutEhxH5FH684sXpcDyiRPdanRKdk1heF
                                     </div>
                                 </a>
                                 <a class="dropdown-item d-flex align-items-center" href="#">
@@ -248,7 +248,7 @@
                             </div>
                         </li>
 
-                        <!-- Nav Item - Messages -->
+                        <!-- Nav Item - Centro de Mensagens -->
                         <li class="nav-item dropdown no-arrow mx-1">
                             <a class="nav-link dropdown-toggle" href="#" id="messagesDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -256,7 +256,7 @@
                                 <!-- Counter - Messages -->
                                 <span class="badge badge-danger badge-counter">7</span>
                             </a>
-                            <!-- Dropdown - Messages -->
+                            <!-- Dropdown - Messages -- Centro de Mensagens -->
                             <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                 aria-labelledby="messagesDropdown">
                                 <h6 class="dropdown-header">
@@ -268,10 +268,12 @@
                                             alt="...">
                                         <div class="status-indicator bg-success"></div>
                                     </div>
+									
+									
                                     <div class="font-weight-bold">
-                                        <div class="text-truncate">Hi there! I am wondering if you can help me with a
-                                            problem I've been having.</div>
-                                        <div class="small text-gray-500">Emily Fowler · 58m</div>
+                                        <div class="text-truncate">Doação em Dogecoin.
+                                            </div>
+                                        <div class="small text-gray-500">Envie Para o Endereço = DEutEhxH5FH684sXpcDyiRPdanRKdk1heF</div>
                                     </div>
                                 </a>
                                 <a class="dropdown-item d-flex align-items-center" href="#">
@@ -528,7 +530,9 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; Domingos Filho Dev 2021</span>
+                        <span>Copyright &copy; Domingos Filho Dev 2021</span></br>
+						<span>Doações em Dogecoin Serão Bem Recebidas</span></br>
+						<span>Envie Para o Endereço = DEutEhxH5FH684sXpcDyiRPdanRKdk1heF </span>
                     </div>
                 </div>
             </footer>
@@ -545,7 +549,7 @@
         <i class="fas fa-angle-up"></i>
     </a>
 
-    <!-- Logout Modal-->
+    <!-- Logout Modal Sai---->
     <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
