--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Cloud Miner - Gerenciador</title>
+    <title>Doge Cloud Miner - Gerenciador</title>
 
     <!-- Fontes personalizadas para este modelo-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -88,7 +88,7 @@
 			 </li>
 			
 			<li class="nav-item active">
-                <a class="nav-link" href="receber.html">
+                <a class="nav-link" href="afiliado.html">
                     <i class="fab fa-affiliatetheme"></i>
                     <span>Afiliados</span></a>
             </li>
