--- a/faq.html
+++ b/faq.html
@@ -88,7 +88,7 @@
 			</li>
 			
 			<li class="nav-item active">
-                <a class="nav-link" href="receber.html">
+                <a class="nav-link" href="afiliado.html">
                     <i class="fab fa-affiliatetheme"></i>
                     <span>Afiliados</span></a>
             </li>
